# aa-hrapps

./: LICENSE  README.md  pyproject.toml
hrapps/: __init__.py  admin.py  apps.py  auth_hooks.py  models.py  urls.py  views.py
hrapps/migrations/: 0001_initial.py
hrapps/static/hrapps/css/: builder.css
hrapps/static/hrapps/js/: builder.js
hrapps/templates/hrapps/: base.html  builder.html  dashboard.html  form_library.html  form_viewer.html
hrapps/templates/hrapps/bundles/: builder-css.html  builder-js.html  coreuifree-css.html  materialdesignicons-css.html  sortable-js.html
hrapps/templates/hrapps/partials/: builder_success_modal.html  builder_templates.html  delete_confirm_modal.html
hrapps/templates/hrapps/partials/fields/: checkboxes.html  dropdown.html  list-group-item.html  text-area.html  text-field.html
hrapps/templates/hrapps/partials/fields/builder/: checkboxes.html  dropdown.html
hrapps/templates/hrapps/partials/fields/form/: checkboxes.html  dropdown.html  text-area.html  text-field.html
