[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-hrapps"
description = "A recruitment tool for allianceauth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "recruitment",
    "hr",
    "human resources",
]
license = { file = "LICENSE" }
authors = [
    { name = "Col Crunch", email = "it-team@serin.space" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4",
]

optional-dependencies.discordbot = [
    "allianceauth-discordbot>=3.8",
]
urls.Documentation = "https://gitlab.com/colcrunch/aa-hrapps/-/blob/master/README.md"
urls.Homepage = "https://gitlab.com/colcrunch/aa-hrapps"
urls.Source = "https://gitlab.com/colcrunch/aa-hrapps.git"
urls.Tracker = "https://gitlab.com/colcrunch/aa-hrapps/-/issues"

[tool.hatch.build]
include = [
    "/aa-hrapps",
]

[tool.hatch.version]
path = "aa-hrapps/__init__.py"

[tool.pycodestyle]
max-line-length = 121
